Organizando o código e o Readme

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
   </head>
   <body>
-    <script src="sketch.js"></script>
-    <script src="imagens.js"></script>
-    <script src="ator.js"></script>
-    <script src="carro.js"></script>
-    <script src="p5.collide2d.js"></script>
+    <script src="./scripts.js/sketch.js"></script>
+    <script src="./scripts.js/imagens.js"></script>
+    <script src="./scripts.js/ator.js"></script>
+    <script src="./scripts.js/carro.js"></script>
+    <script src="./scripts.js/p5.collide2d.js"></script>
   
 
 </body></html>
