--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html>
   
 <head>
-     <script src="p5.min.js"></script>
-    <script src="p5.dom.min.js"></script>
-    <script src="p5.sound.min.js"></script>
+     <script src="./scripts.js/p5.min.js"></script>
+    <script src="./scripts.js/p5.dom.min.js"></script>
+    <script src="./scripts.js/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
