atualizando o nome da pasta

--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <html>
   
 <head>
-     <script src="./scripts.js/p5.min.js"></script>
-    <script src="./scripts.js/p5.dom.min.js"></script>
-    <script src="./scripts.js/p5.sound.min.js"></script>
+     <script src="./js/p5.min.js"></script>
+    <script src="./js/p5.dom.min.js"></script>
+    <script src="./js/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
   </head>
   <body>
-    <script src="./scripts.js/sketch.js"></script>
-    <script src="./scripts.js/imagens.js"></script>
-    <script src="./scripts.js/ator.js"></script>
-    <script src="./scripts.js/carro.js"></script>
-    <script src="./scripts.js/p5.collide2d.js"></script>
+    <script src="./js/sketch.js"></script>
+    <script src="./js/imagens.js"></script>
+    <script src="./js/ator.js"></script>
+    <script src="./js/carro.js"></script>
+    <script src="./js/p5.collide2d.js"></script>
   
 
 </body></html>
